alignment issue

--- a/src/app/ynw_consumer/components/waitlist/appointment/consumer-appointment.component.css
+++ b/src/app/ynw_consumer/components/waitlist/appointment/consumer-appointment.component.css
@@ -1758,7 +1758,7 @@ body.modal-open {
   text-align: center;
   font-size: 1.3rem;
   margin-top:50px;
-  margin-left: 100px;
+  /* margin-left: 100px; */
 }
 .prepayment-confirm .btn{
   border-radius: 1.5rem!important;
@@ -1784,7 +1784,7 @@ body.modal-open {
     text-align: center;
     font-size: 1rem;
     margin-top:20px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
   .prepayment-confirm .btn{
     border-radius: 1rem!important;
